# ayni

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  build.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release-please.yml  test.yml
ayni/: build.py  cache.py  cli.py  codebase_search.py  parse.py  prompt.py  similar.py  types.py
tests/: conftest.py  test_cache.py  test_cli.py  test_codebase_search.py  test_parse.py
