[tool.poetry]
name = "ayni"
version = "0.2.1"
description = "Chat with your codebase"
authors = ["yemaney <yemane_@outlook.com>"]
license = "MIT"
readme = "README.md"
include = [
    {path = "ayni/build/my-languages.so", format = "wheel"}
]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
tree-sitter = "^0.20.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ayni = "ayni.cli:main"
