[tool.poetry]
name = "ayni"
version = "0.3.0"
description = "Chat with your codebase"
authors = ["yemaney <yemane_@outlook.com>"]
license = "MIT"
readme = "README.md"
include = [
    {path = "ayni/build/my-languages.so", format = "wheel"}
]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
python-dotenv = "^1.0.0"
scipy = "^1.11.2"
tree-sitter = "^0.20.1"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ayni = "ayni.cli:main"
